--- a/app/templates/orders/modals/orders_update_modal.html
+++ b/app/templates/orders/modals/orders_update_modal.html
@@ -24,6 +24,7 @@
                     <div class="col-md-3">
 
                         <!-- order id value to be populated by js -->
+                        <input type="hidden" id="order-user-id-update-hidden" name="order-user-id-update-hidden" value="{{ current_user.id }}">
                         <input type="hidden" id="order-id-update-hidden" name="order-id-update-hidden" value="{{ order_id }}">
                         <input type="hidden" id="order-total-cost-hidden" name="order-total-cost-hidden">
                         <input type="hidden" id="order-status-update-hidden" name="order-status-update-hidden">
@@ -190,6 +191,22 @@
                         }}
                     </div>
 
+                    <div class="col-md-3">
+
+                        <!-- Payment Date -->
+                        {{ macros.input_group_floating(
+                            label='Payment Date', 
+                            id='payment-date-update', 
+                            name='payment-date-update',
+                            type='date',
+                            plaintext=true,
+                            is_required=false,
+                            is_readonly=true,
+                            tooltip='The date the order was paid for') 
+                        }}
+
+                    </div>
+
                 </div>
 
                 <div id="update-line-items-container">
@@ -240,14 +257,30 @@
                     <div class="btn-toolbar" role="toolbar">
                         <div class="btn-group me-2" role="group">
                             <!-- Cancel/Delete order buttons -->
-                            <button type="button" class="btn btn-outline-warning" onclick="document.querySelector('#orderCancelForm').submit();"
-                                    id="cancel-order-btn">Cancel Order</button>
+                            <button type="button" 
+                                    class="btn btn-outline-warning" 
+                                    onclick="document.querySelector('#orderCancelForm').submit();"
+                                    id="cancel-order-btn">
+                                    Cancel Order
+                            </button>
 
-                            <button type="button" class="btn btn-outline-danger" onclick="document.querySelector('#orderDeleteForm').submit();"
-                                    id="delete-order-btn"{% if not current_user.is_admin %}disabled{% endif %}>Delete Order</button>
+                            <button 
+                                type="button" 
+                                class="btn btn-outline-danger" 
+                                onclick="document.querySelector('#orderDeleteForm').submit();"
+                                id="delete-order-btn"
+                                {% if not current_user.is_admin %}disabled{% endif %}>
+                                Delete Order
+                            </button>
                         </div>
                         <div class="btn-group me-2" role="group">
-                            <!-- Edit/Update order buttons -->
+                            <!-- Shipment page of associated order -->
+                            <a type="button" 
+                               class="btn btn-outline-secondary"
+                               id="nav-shipment-btn"
+                               href="#">
+                               Go To Shipment
+                            </a>
                         </div>
 
                     <!-- Button to close modal -->
