Enhance UI and functionality: update header for print view, rename shipment date label, add error handling for order and shipment retrieval, include Bootstrap Icons, and improve modal and table structures.

--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,5 +1,5 @@
 <!-- Sticky header -->
-<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow">
+<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow d-print-none">
     <h2 class="sticky-navbar-header">Ice Track</h2>
     <!-- Button to toggle offcanvas -->
     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
