--- a/app/templates/shipments/modals/shipment_update_modal.html
+++ b/app/templates/shipments/modals/shipment_update_modal.html
@@ -58,7 +58,7 @@
                     <div class="col-md-3">
 
                         {{ macros.input_group_floating(
-                            label='Shipment Date', 
+                            label='Date Shipped', 
                             id='date-shipped-update', 
                             name='date-shipped-update', 
                             type='text',
