--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -9,7 +9,7 @@
     <div class="offcanvas-body">
         <ul class="nav flex-column flex-grow-1 noscroll">
             <li class="nav-item pb-md-2 pb-lg-3">
-                <a class="sidebar-nav-link nav-link active" aria-current="page" href="{{ url_for('inventory.inventory_home') }}">Inventory</a>
+                <a class="sidebar-nav-link nav-link" href="{{ url_for('inventory.inventory_home') }}">Inventory</a>
             </li>
             <li class="nav-item pb-md-2 pb-lg-3">
                 <a class="sidebar-nav-link nav-link" href="{{ url_for('orders.orders_home') }}">Orders</a>
@@ -21,7 +21,7 @@
                 <a class="sidebar-nav-link nav-link" href="{{ url_for('tickets.tickets_home') }}">Trouble Tickets</a>
             </li>
             <li class="nav-item pb-md-2 pb-lg-3">
-                <a class="sidebar-nav-link nav-link active" aria-current="page" href="{{ url_for('invoices.invoices_home') }}">Invoicing</a>
+                <a class="sidebar-nav-link nav-link" href="{{ url_for('invoices.invoices_home') }}">Invoicing</a>
             </li>
             <!-- Admin dashboard only shows if current user is an admin -->
             {% if current_user.is_admin %}
