--- a/app/templates/inventory/modals/inventory_add_modal.html
+++ b/app/templates/inventory/modals/inventory_add_modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Item</h5>
+                <h5 class="modal-title">Add Product</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -64,6 +64,7 @@
                                     min='1',
                                     max='50',
                                     pattern='^\d+(\.\d{1,2})?$',
+                                    extra="step=0.01",
                                     is_required=true,
                                     tooltip='Enter the price of the product.'
                                 ) }}
@@ -111,10 +112,9 @@
                                     label='Dock Date',
                                     id='product-dock-date-add',
                                     name='product-dock-date-add',
-                                    type='text',
-                                    pattern='^(0[1-9]|1[0-2])/(0[1-9]|[12][0-9]|3[01])/\d{4}$',
+                                    type='date',
                                     classes='product-dock-date-add',
-                                    tooltip='Enter the dock date of the product in the form MM/DD/YYYY.'
+                                    tooltip='Enter the date that the product will arrive in the warehouse.'
                                 ) }}
 
                             </div>
@@ -125,7 +125,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary">Add Item</button>
+                        <button type="submit" class="btn btn-primary">Add Product</button>
                     </div>
                 </form>
             </div>
