--- a/app/templates/invoices/invoices.html
+++ b/app/templates/invoices/invoices.html
@@ -19,10 +19,19 @@
 
         <!-- Main content -->
         <main class="ms-sm-auto px-md-4 pt-md-3">
-            <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <!-- Banner header -->
-                <h1>Invoices</h1>
+
+            {% set return_btn %}
+            <div class="btn-group">
+                <a type="button" href="{{ url_for('orders.orders_home') }}" class="btn btn-outline-secondary">Go to Orders</a>
             </div>
+            {% endset %}
+
+            {{ macros.section_header('Invoices', extra_html=return_btn | safe) }}
+
+            <!-- Message Display Container -->
+            {% if msg %}
+                {{ macros.message(msg, msg_type or "danger", "/invoices") }}
+            {% endif %}
 
             <!-- Invoices Table -->
             <div class="mt-5">
@@ -39,8 +48,9 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
                         {% if invoices %}
+                            {% set hidden_attributes = ['id'] %}
                             {% for key in invoices[0].keys() %}
-                                {% if key not in ['id', 'disposition', 'deleted_at'] %}
+                                {% if key not in hidden_attributes %}
                                     <li><a class="dropdown-item" href="/inventory?filter={{ key }}">{{ key | attribute }}</a></li>
                                 {% endif %}
                             {% endfor %}
@@ -52,22 +62,33 @@
                 <!-- Table for invoices -->
                 <table class="table table-hover table-borderless">
                     {% if invoices %}
+                    {% set hidden_attributes = ['user_id'] %}
                     <thead>
                         <tr>
-                            <th scope="col">Customer Name</th>
-                            <th scope="col">Order ID</th>  <!-- Change this from dynamic to static -->
-                            <th scope="col">Total</th>
-                            <th scope="col">Due Date</th>
+                            {% for key in invoices[0].keys() %}
+                                {% if key not in hidden_attributes %}
+                                    <th scope="col">{{ key | id }}</th>
+                                {% endif %}
+                            {% endfor %}
                             <th scope="col">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for invoice in invoices %}
                             <tr id="row-{{ loop.index - 1 }}">
-                                <td>{{ invoice.customer_name }}</td>
-                                <td>{{ invoice.id }}</td>
-                                <td>{{ invoice.total | currency }}</td>
-                                <td>{{ invoice.due_date }}</td>
+                                {% for key, value in invoice.items() %}
+                                    {% if key not in hidden_attributes %}
+                                        {% if key == 'total_cost' %}
+                                            <td>{{ value | currency }}</td>
+                                        {% elif 'date' in key %}
+                                            <td>{{ value | date }}</td>
+                                        {% elif key == 'overdue' %}
+                                            <td>{{ value if value > 0 else '-' }}</td>
+                                        {% else %}
+                                            <td>{{ value | title }}</td>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
                                 <td>
                                     <a href="{{ url_for('invoices.current_invoice', invoice_id=invoice.id) }}" class="btn btn-primary btn-sm">View Invoice</a>
                                 </td>
