--- a/app/templates/orders/modals/orders_update_modal.html
+++ b/app/templates/orders/modals/orders_update_modal.html
@@ -187,7 +187,7 @@
                             name='order-status-update',
                             options=_options,
                             is_disabled=True,
-                            tooltip='The status of the order') 
+                            tooltip='The status of the order. Set delivery date if delivered') 
                         }}
                     </div>
 
@@ -280,6 +280,14 @@
                                id="nav-shipment-btn"
                                href="#">
                                Go To Shipment
+                            </a>
+
+                            <!-- Invoice page of associated order -->
+                            <a type="button" 
+                               class="btn btn-outline-secondary"
+                               id="nav-invoice-btn"
+                               href="#">
+                               Go To Invoice
                             </a>
                         </div>
 
