--- a/app/templates/shipments/shipments.html
+++ b/app/templates/shipments/shipments.html
@@ -11,35 +11,21 @@
 
     {% include 'shipments/modals/shipment_update_modal.html' %}
 
-    <div class="container-md">
-
-        <div class="d-flex justify-content-between">
-            <h1>Outgoing Orders</h1>
-            <a href="{{ url_for('shipments.status_report') }}" class="btn btn-primary">View Status Report</a>
-        </div>
-        <!-- Dropdown for 'Filter By' functionality -->
-        <div class="dropdown mt-3">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                Filter By
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-
-                {% if shipment %}
-                    {% for key in shipments[0].keys() %}
-                        {% if key not in ['id', 'disposition', 'deleted_at'] %}
-                            <li><a class="dropdown-item" href="/inventory?filter={{ key }}">{{ key | attribute }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
-
-            </ul>
-        </div>        
+    <div class="container-md">  
         
-        {{ macros.section_header("Shipments") }}
+        {% set status_report_btn %}
+            <a 
+                class="btn btn-outline-secondary"
+                href="{{ url_for('shipments.status_report') }}">
+                View Status Report
+            </a>
+        {% endset %}
+
+        {{ macros.section_header("Shipments", extra_html=status_report_btn | safe) }}
         
         <!-- Message Display Container -->
         {% if msg %}
-            {{ macros.message(msg, msg_type or "danger", "/shipment") }}
+            {{ macros.message(msg, msg_type or "danger", "/shipments") }}
         {% endif %}
 
         {% if shipments %}
@@ -83,9 +69,11 @@
                             <td>{{ shipment.order.user.first_name }} {{ shipment.order.user.last_name }}</td>
                             {% for key, value in shipment.items() %}
                                 {% if key not in hidden_attributes %}
-                                    <td>
-                                        {{ value | title }}
-                                    </td>
+                                    {% if 'date' in key %}
+                                        <td>{{ (value | date) if value else '-' }}</td>
+                                    {% else %}
+                                        <td>{{ value | title }}</td>
+                                    {% endif %}
                                 {% endif %}
                             {% endfor %}
                         </tr>
